--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+django-extensions = "*"
+ipython = "*"
+werkzeug = "*"
+pydotplus = "*"
+django-querycount = "*"
+jupyter = "*"
 
 [packages]
 django = "*"
